--- a/jenkins-jobs.yml
+++ b/jenkins-jobs.yml
@@ -3,8 +3,11 @@
   roles:
     - jenkins
   vars:
+    folders:
+      - { folder_name: "CI-Pipelines" }
+      - { folder_name: "Infra-Jobs" }
     mjobs:
-      - { job_name: "cart", repo_name: "https://github.com/raghudevopsb74/cart" }
+      - { job_name: "cart", repo_name: "https://github.com/raghudevopsb74/cart", folder_name: "CI-Pipelines" }
     sjobs:
-      - { job_name: "roboshop-terraform", repo_name: "https://github.com/raghudevopsb74/roboshop-terraform" }
+      - { job_name: "roboshop-terraform", repo_name: "https://github.com/raghudevopsb74/roboshop-terraform", folder_name: "Infra-Jobs" }
 
