--- a/roles/jenkins/tasks/folders.yml
+++ b/roles/jenkins/tasks/folders.yml
@@ -6,7 +6,7 @@
 - name: Create Folder - {{ item.folder_name }}
   community.general.jenkins_job:
     config: "{{ lookup('file', '/tmp/folder.xml') }}"
-    name: "{{ item.job_name }}"
+    name: "{{ item.folder_name }}"
     password: admin123
     url: http://172.31.31.157:8080
     user: admin
