--- a/jenkins-jobs.yml
+++ b/jenkins-jobs.yml
@@ -8,11 +8,11 @@
       - { folder_name: "Infra-Jobs" }
     mjobs:
       - { job_name: "cart", repo_name: "https://github.com/raghudevopsb74/cart", folder_name: "CI-Pipelines" }
-      - { job_name: "catalogue", repo_name: "https://github.com/raghudevopsb74/cart", folder_name: "CI-Pipelines" }
-      - { job_name: "user", repo_name: "https://github.com/raghudevopsb74/cart", folder_name: "CI-Pipelines" }
-      - { job_name: "shipping", repo_name: "https://github.com/raghudevopsb74/cart", folder_name: "CI-Pipelines" }
-      - { job_name: "payment", repo_name: "https://github.com/raghudevopsb74/cart", folder_name: "CI-Pipelines" }
-      - { job_name: "frontend", repo_name: "https://github.com/raghudevopsb74/cart", folder_name: "CI-Pipelines" }
+      - { job_name: "catalogue", repo_name: "https://github.com/raghudevopsb74/catalogue", folder_name: "CI-Pipelines" }
+      - { job_name: "user", repo_name: "https://github.com/raghudevopsb74/user", folder_name: "CI-Pipelines" }
+      - { job_name: "shipping", repo_name: "https://github.com/raghudevopsb74/shipping", folder_name: "CI-Pipelines" }
+      - { job_name: "payment", repo_name: "https://github.com/raghudevopsb74/payment", folder_name: "CI-Pipelines" }
+      - { job_name: "frontend", repo_name: "https://github.com/raghudevopsb74/frontend", folder_name: "CI-Pipelines" }
     sjobs:
       - { job_name: "roboshop-terraform", repo_name: "https://github.com/raghudevopsb74/roboshop-terraform", folder_name: "Infra-Jobs" }
 
