--- a/jenkins-jobs.yml
+++ b/jenkins-jobs.yml
@@ -15,6 +15,7 @@
       - { job_name: "payment", repo_name: "https://github.com/raghudevopsb74/payment", folder_name: "CI-Pipelines" }
       - { job_name: "frontend", repo_name: "https://github.com/raghudevopsb74/frontend", folder_name: "CI-Pipelines" }
       - { job_name: "roboshop-aws-ps-init-cont", repo_name: "https://github.com/raghudevopsb74/roboshop-aws-ps-init-cont", folder_name: "CI-Pipelines" }
+      - { job_name: "roboshop-schema-init-cont", repo_name: "https://github.com/raghudevopsb74/roboshop-schema-init-cont", folder_name: "CI-Pipelines" }
     sjobs:
       - { job_name: "roboshop-terraform", repo_name: "https://github.com/raghudevopsb74/roboshop-terraform", folder_name: "Infra-Jobs" }
       - { job_name: "App-Deployment", repo_name: "https://github.com/raghudevopsb74/roboshop-ansible", folder_name: "Deployment-Jobs" }
